src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Business</fullName>
                    <default>true</default>
                    <label>U.S. Business</label>
                </value>
                <value>
                    <fullName>Foreign Business</fullName>
                </value>
                <value>
                    <fullName>Trade/Industry Association</fullName>
                </value>
                <value>
                    <fullName>Business Service Provider/Consultant/Lawyer</fullName>
                </value>
                <value>
                    <fullName>Economic Development Organization</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associated_Business_Names__c</fullName>
        <description>Alternative names for the organization.</description>
        <inlineHelpText>Enter alternative names for the organization in this field.</inlineHelpText>
        <label>Associated Organization Names</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy Organization ID for easy data loading and validation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Organization ID for easy data loading and validation.</inlineHelpText>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Service Providers</fullName>
                </value>
                <value>
                    <fullName>Codes</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Country Pages</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Links</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Procurment Opportunity</fullName>
                </value>
                <value>
                    <fullName>Promotion Opportunity</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Tariff Schedules</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <label>Congressional District</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_District_formula__c</fullName>
        <formula>IF(State_Code__c &lt;&gt; NULL &amp;&amp;  Congressional_District__c &lt;&gt; NULL , State_Code__c +&apos;-&apos;+ Congressional_District__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto populated for US Organizations based on zip code</inlineHelpText>
        <label>Congressional District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <inlineHelpText>This field is auto populated for US Organizations based on zip code</inlineHelpText>
        <label>County (US Only)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_field__c</fullName>
        <description>to catpure duns field numbers</description>
        <label>DUNS field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Company_Record_Link__c</fullName>
        <description>Opens a new tab with the related D&amp;B Company information.</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; DNBoptimizer__DnBCompanyRecord__r.Name, &apos;Access Additional D&amp;B Company Data&apos;)</formula>
        <inlineHelpText>Opens a new tab with the related D&amp;B Company information.</inlineHelpText>
        <label>D&amp;B Company Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataPartnerType__c</fullName>
        <label>Data Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DupeBlocker_Insert_Action__c</fullName>
        <label>DupeBlocker Insert Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Update_Action__c</fullName>
        <label>DupeBlocker Update Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Dupeblocker_Triggering__c</fullName>
        <description>for uploading to trigger dupeblocker.</description>
        <label>For Dupeblocker Triggering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Exported_To__c</fullName>
        <description>list of contries visited</description>
        <label>Has Exported To</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITA_Organization_and_Product_Description__c</fullName>
        <inlineHelpText>ITA’s notes on this company</inlineHelpText>
        <label>ITA Organization and Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Data Admin teams and Sys Admins - check this to eliminate from future reports easily.</inlineHelpText>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <description>based on NAICS; changed Field Type from Long Text Area(3000);</description>
        <label>Industries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Services</fullName>
                </value>
                <value>
                    <fullName>Advanced Ceramics</fullName>
                </value>
                <value>
                    <fullName>Advertising Services</fullName>
                </value>
                <value>
                    <fullName>Agricultural Chemicals</fullName>
                </value>
                <value>
                    <fullName>Agricultural Machinery &amp; Eq.</fullName>
                </value>
                <value>
                    <fullName>Agricultural Products</fullName>
                </value>
                <value>
                    <fullName>Agricultural Services</fullName>
                </value>
                <value>
                    <fullName>Air Conditioning/Refrigeration Eq.</fullName>
                </value>
                <value>
                    <fullName>Aircraft/Aircraft Parts</fullName>
                </value>
                <value>
                    <fullName>Airport/Ground Support Eq.</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Architectural/Constr./Engineering SVC</fullName>
                </value>
                <value>
                    <fullName>Artwork</fullName>
                </value>
                <value>
                    <fullName>Audio/Visual Eq.</fullName>
                </value>
                <value>
                    <fullName>Automobile/Light Truck/Vans</fullName>
                </value>
                <value>
                    <fullName>Automotive Parts/Services Eq.</fullName>
                </value>
                <value>
                    <fullName>Aviation Services</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Books/Periodicals</fullName>
                </value>
                <value>
                    <fullName>Building Products</fullName>
                </value>
                <value>
                    <fullName>Business Eq. (Non-Computer)</fullName>
                </value>
                <value>
                    <fullName>Chemical Production Machinery</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Commercial Fishing Eq.</fullName>
                </value>
                <value>
                    <fullName>Commercial Vessel/Eq. (Non-Fisheries)</fullName>
                </value>
                <value>
                    <fullName>Composite Materials</fullName>
                </value>
                <value>
                    <fullName>Computers/Peripherals</fullName>
                </value>
                <value>
                    <fullName>Computer Services</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Construction Eq.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Holding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when this record is a Holding organization</inlineHelpText>
        <label>Is Holding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Law_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked and will determine if the Organization is a Law Firm</description>
        <inlineHelpText>Put a check if Organization is a Law Firm.</inlineHelpText>
        <label>Is Law Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Subsidiary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Subsidiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_USE_DnB_Optimize__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows or prevents account match and enrich from D&amp;B Optimizer</description>
        <inlineHelpText>When checked, match and enrich from D&amp;B Optimizer will process</inlineHelpText>
        <label>Allow D&amp;B Optimizer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Industry_Holder__c</fullName>
        <label>Lead Industry Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sector_Holder__c</fullName>
        <label>Lead Sector Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_sector_Holder__c</fullName>
        <label>Lead Sub-sector Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_ITA_Office__c</fullName>
        <label>Local ITA Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>displays the organization it will be merged with.</description>
        <label>Merged Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Verification_Status__c</field>
                <operation>equals</operation>
                <value>Verified</value>
            </filterItems>
            <infoMessage>Only Verified Organizations can accept merged records.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minority_Owned_Indicator1__c</fullName>
        <description>This field automatically populates from the D&amp;B Optimizer</description>
        <inlineHelpText>This field automatically populates from the D&amp;B Optimizer</inlineHelpText>
        <label>Minority Owned Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minority_Owned_Indicator__c</fullName>
        <description>Minority-Owned Indicator from D&amp;B</description>
        <formula>TEXT(DandbCompany.MinorityOwned)</formula>
        <label>Minority-Owned Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>This field automatically populates from the D&amp;B Optimizer</description>
        <inlineHelpText>This field automatically populates from the D&amp;B Optimizer</inlineHelpText>
        <label>aaaNAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <description>This field automatically populates from the D&amp;B Optimizer</description>
        <inlineHelpText>This field automatically populates from the D&amp;B Optimizer</inlineHelpText>
        <label>aaaNAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <description>IF(DNBoptimizer__DnBCompanyRecord__r.      DNBoptimizer__NAICSCode1__c&gt;0, DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode1__c &amp; &quot;: &quot; &amp;  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSDescription1__c &amp; &quot;, &quot; &amp;  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode2__c &amp; &quot;: &quot; &amp;  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSDescription2__c &amp; &quot;, &quot; &amp;  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode3__c &amp; &quot;: &quot; &amp;  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSDescription3__c</description>
        <formula>(IF(NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode1__c)) , DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode1__c &amp; &quot;: &quot; &amp; DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSDescription1__c,&quot;&quot;) &amp;
IF(NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode2__c)), &quot;, &quot; &amp; DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode2__c &amp; &quot;: &quot; &amp; DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSDescription2__c,&quot;&quot;) &amp;
IF(NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode3__c)), &quot;, &quot; &amp; DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSCode3__c &amp; &quot;: &quot; &amp; DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__NAICSDescription3__c, &quot;&quot;)
)</formula>
        <inlineHelpText>Displays top 3 NAICS codes with their description for this company.</inlineHelpText>
        <label>NAICS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_18_ID__c</fullName>
        <description>Adds 18 character case safe ID for reporting purposes.</description>
        <formula>Casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Location__c</fullName>
        <label>Organization Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Located in US</fullName>
                </value>
                <value>
                    <fullName>Located outside US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_One__c</fullName>
        <description>This field is for the concept of Power of One. It is a field to use for summary counting sub groups and the like.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is for being able to sum on records for reporting. Not shown on page layout.</inlineHelpText>
        <label>Organization One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Size__c</fullName>
        <description>Decision on organization size is based on number of employees. If employees’ field is entered by TS, formula is based on that field, otherwise, use D&amp;B employee fields. 1-499 = Small, 500-999 = Medium, &gt;999 = Large</description>
        <label>Organization Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Business Currently Exporting Goods/Services</fullName>
                </value>
                <value>
                    <fullName>U.S. Business Seeking to Export Goods/Services</fullName>
                </value>
                <value>
                    <fullName>U.S. Citizen Seeking to Export Goods/Services</fullName>
                </value>
                <value>
                    <fullName>U.S. Educational Institution</fullName>
                </value>
                <value>
                    <fullName>U.S. Economic Development Organization</fullName>
                </value>
                <value>
                    <fullName>U.S. Travel &amp; Tourism Bureau</fullName>
                </value>
                <value>
                    <fullName>U.S. based Student/Researcher</fullName>
                </value>
                <value>
                    <fullName>U.S. Industry Associations</fullName>
                </value>
                <value>
                    <fullName>U.S. Trade Show/Event Organizer</fullName>
                </value>
                <value>
                    <fullName>Service Provider to U.S. Exporters</fullName>
                </value>
                <value>
                    <fullName>U.S. Government</fullName>
                </value>
                <value>
                    <fullName>Foreign Subsidiary of U.S. Company (95% U.S. owned)</fullName>
                </value>
                <value>
                    <fullName>Foreign Subsidiary of U.S. Company (less than 95% U.S. owned)</fullName>
                </value>
                <value>
                    <fullName>Current or Prospective Buyer of U.S. Goods/Services</fullName>
                </value>
                <value>
                    <fullName>Current or Prospective Investor in U.S.</fullName>
                </value>
                <value>
                    <fullName>Foreign Government Entity</fullName>
                </value>
                <value>
                    <fullName>Foreign Trade Show/Event Organizer</fullName>
                </value>
                <value>
                    <fullName>Foreign Student/Researcher</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive &amp; Smart Mobility</fullName>
                </value>
                <value>
                    <fullName>Advanced Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Food and Agriculture Value Chain</fullName>
                </value>
                <value>
                    <fullName>Healthcare and Health Technologies</fullName>
                </value>
                <value>
                    <fullName>Education and Training Services</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environment Technologies</fullName>
                </value>
                <value>
                    <fullName>Information and Communication Technologies</fullName>
                </value>
                <value>
                    <fullName>Media and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Travel and Tourism</fullName>
                </value>
                <value>
                    <fullName>Marine Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Office__c</fullName>
        <formula>Owner.ITA_Office__c</formula>
        <inlineHelpText>Primary ITA POC for this Organization&apos;s office.</inlineHelpText>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>                                                                                                                         <fullName>Primary_Trade_Style__c</fullName>
        <description>Primary Trade Style from D&amp;B Optimizer</description>
        <formula>DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__TradestyleName1__c</formula>
        <label>Primary Trade Style</label>                                                                                           <required>false</required>                                                                                                   <trackHistory>false</trackHistory>
        <type>Text</type>                                                                                                            <unique>false</unique>                                                                                                   </fields>
    <fields>
        <fullName>Privacy_Shield_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Shield Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Organization_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Users may select this to alert the data team to investigate the organization record for removal.</inlineHelpText>
        <label>Request Organization Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <description>Checkbox is checked when # of employees on record is &gt;1 and &lt;500 Old Formula: IF(MAX(DandbCompany.GlobalUltimateTotalEmployees, NumberOfEmployees, DandbCompany.EmployeesHere, DandbCompany.EmployeesTotal)&lt;501, TRUE, FALSE)</description>
        <formula>IF(MAX(DandbCompany.GlobalUltimateTotalEmployees, NumberOfEmployees, DandbCompany.EmployeesHere, DandbCompany.EmployeesTotal)&lt;501 &amp;&amp; BillingCountry = &apos;United States&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated based on Data.com, where there are less than 501 employees &amp; country = US, includes null values.</inlineHelpText>
        <label>SME (U.S. Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>Legacy SharePoint record ID</description>
        <label>SharePoint ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Org_Name__c</fullName>
        <description>Legacy SharePoint Organization Name</description>
        <label>Sharepoint Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTechnology__c</fullName>
        <label>Source Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RSS</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>Web Service</fullName>
                </value>
                <value>
                    <fullName>Word Document</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__DUNS_Global_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Ultimate Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>All Child Accounts</relationshipLabel>
        <relationshipName>All_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Excluded_From_Account_Hierarchies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Default Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Owner__c</fullName>
        <description>The name of the Sales rep who owns the Account.</description>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <inlineHelpText>The name of the Sales rep who owns the Account.</inlineHelpText>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direct Child Accounts</relationshipLabel>
        <relationshipName>Direct_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <description>This field automatically populates from the D&amp;B Optimizer</description>
        <inlineHelpText>This field automatically populates from the D&amp;B Optimizer</inlineHelpText>
        <label>aaaTradestyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Tax_ID_from_Data_com__c</fullName>
        <description>This is the Tax ID field from D&amp;B company information, removed and populated here to provide FLS to prevent users from accessing the field. The D&amp;B C field is overwritten after copy.</description>
        <inlineHelpText>This is the Tax ID field from D&amp;B company information.</inlineHelpText>
        <label>US Tax ID from Data.com</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for data support team to use to recognize what is a new organization record that needs reviewed to ensure non-dupe or other issue. NOT viewable by ITA Users.</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                    <default>true</default>
                    <label>Unverified</label>
                </value>
                <value>
                    <fullName>To Be Merged</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Woman_Owned_Indicator__c</fullName>
        <description>Woman-Owned Indicator from Data.com</description>
        <formula>TEXT(DandbCompany.WomenOwned)</formula>
        <label>Woman-Owned Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <description>This field automatically populates from the D&amp;B Optimizer</description>
        <inlineHelpText>This field automatically populates from the D&amp;B Optimizer</inlineHelpText>
        <label>aaaYear Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMenu_ES_ID__c</fullName>
        <description>Legacy eMenu ES ID</description>
        <label>eMenu ES ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMenu_Org_Name__c</fullName>
        <description>Legacy eMenu Organization Name</description>
        <label>eMenu Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_number__c</fullName>
        <label>test number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zipCodeLen__c</fullName>
        <formula>LEN(RIGHT( BillingPostalCode ,(LEN(BillingPostalCode)- FIND(&apos;-&apos;, BillingPostalCode))))+
LEN(LEFT(BillingPostalCode, FIND(&apos;-&apos;, BillingPostalCode )-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zipCodeLen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_API_Partner_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Office__c</columns>
        <columns>Industries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Account</value>
        </filters>
        <label>All API Partner Organizations</label>
        <sharedTo>
            <group>SOD_Scrum_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_smd</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Tarte</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyAccountsNotCleaned</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Organization_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>DNBoptimizer__DnBCompanyRecord__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Organizations Not Cleaned</label>
    </listViews>
</CustomObject>